--- a/style.css
+++ b/style.css
@@ -1,29 +1,170 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: red;
-}
-
-.clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-body {
-    background-image: linear-gradient(rgba(62, 20, 20, .4, rgba(62, 20, 20, .4)), url(black.jpg);
-    background-size: cover;
-    background-position: center;
-    font-family: lato;
-    position: relative;
-    height: 100vh;
-    color: #555555;
-}
-
-wrapper {
-    width: 1000px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-}
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+                color: red;
+            }
+            
+            .clearfix::after {
+                content: "";
+                display: table;
+                clear: both;
+            }
+            
+            body {
+                background-size: cover;
+                background-position: center;
+                font-family: lato;
+                position: relative;
+                height: 100vh;
+                color: #555555;
+            }
+            
+            .wrapper {
+                width: 1000px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background-color: #fff;
+                box-shadow: 0px, 0px, 50px rgba(0, 0, 0.3);
+                overflow: hidden;
+            }
+            
+            .player-0-panel,
+            player-1-panel {
+                width: 500px;
+                float: left;
+                height: 500px;
+                padding: 100px;
+            }
+            /* players */
+            
+            .player-1-panel {
+                width: 500px;
+                float: left;
+                height: 500px;
+                padding: 100px;
+            }
+            
+            .player-name {
+                font-size: 40px;
+                text-align: center;
+                text-transform: uppercase;
+                letter-spacing: 2px;
+                font-weight: 100;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                position: relative;
+            }
+            
+            .player-score {
+                text-align: center;
+                font-size: 80px;
+                font-weight: 100px;
+                color: #EB4D4D;
+                margin-bottom: 130px;
+            }
+            
+            .active {
+                background-color: grey;
+                color: green;
+            }
+            
+            .active .player-name::after {
+                content: '\2022';
+                font-size: 47px;
+                position: absolute;
+                color: #EB4D4D;
+                top: -7px;
+                right: 10px;
+            }
+            
+            .player-current-box {
+                background-color: #EB4D4D;
+                color: #fff;
+                width: 40%;
+                margin: 0 auto;
+                padding: 12px;
+                text-align: center;
+            }
+            
+            .player-current-lebel {
+                text-transform: uppercase;
+                margin-bottom: 10px;
+                font-size: 12px;
+                color: #222;
+            }
+            
+            .player-current-score {
+                font-size: 30px;
+            }
+            
+            botton {
+                position: absolute;
+                width: 200px;
+                left: 50%;
+                transform: translateX(-50%j);
+                color: #555;
+                background: none;
+                border: none;
+                font-family: lato;
+                font-size: 20px;
+                text-transform: uppercase;
+                cursor: pointer;
+                font-weight: 300;
+                transition: background-color 0.3s, color 0.3s;
+            }
+            
+            button:hover {
+                font-weight: 600px;
+            }
+            
+            button:hover i {
+                margin-right: 20px;
+            }
+            
+            button:focus {
+                outline: none
+            }
+            
+            i {
+                color: #EB4D4D;
+                display: inline-block;
+                margin-right: 15px;
+                font-size: 32px;
+                line-height: 1;
+                vertical-align: text-top;
+                margin-top: -4px;
+                transition: margin 0.3s;
+            }
+            
+            .btn-new {
+                top: 45px;
+            }
+            
+            .btn-roll {
+                top: 403px;
+            }
+            
+            .btn-hold {
+                top: 467px;
+            }
+            
+            .dice {
+                position: absolute;
+                left: 50%;
+                top: 178px;
+                transform: translateX(-50%);
+                height: 100px;
+                box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+            }
+            
+            .winner {
+                background-color: #f7f7f7;
+            }
+            
+            .winner .player-name {
+                font-weight: 300px;
+                color: #EB4D4D;
+            }
