--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
                 left: 50%;
                 transform: translate(-50%, -50%);
                 background-color: #fff;
-                box-shadow: 0px, 0px, 50px rgba(0, 0, 0.3);
+                box-shadow: 5px 5px 8px blue, 10px 10px 8px red, 15px 15px 8px green;
                 overflow: hidden;
             }
             
@@ -67,8 +67,12 @@
             }
             
             .active {
-                background-color: grey;
+                background-color: rgb(201, 189, 189);
                 color: green;
+                width: 500px;
+                height: 500px;
+                border: 1px solid grey;
+                border-radius: 5%;
             }
             
             .active .player-name::after {
@@ -157,11 +161,13 @@
                 top: 178px;
                 transform: translateX(-50%);
                 height: 100px;
-                box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+                box-shadow: 5px 10px 18px blue;
             }
             
             .winner {
-                background-color: #f7f7f7;
+                background-color: #11f81c;
+                border: 5px solid blue;
+                border-radius: 20%;
             }
             
             .winner .player-name {
