few style added

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
                 margin: 0;
                 padding: 0;
                 box-sizing: border-box;
-                color: red;
+                color: rgb(13, 255, 0);
             }
             
             .clearfix::after {
@@ -18,6 +18,7 @@
                 position: relative;
                 height: 100vh;
                 color: #555555;
+                background-image: radial-gradient(circle, red, yellow, green);
             }
             
             .wrapper {
@@ -61,7 +62,7 @@
             .control {
                 position: absolute;
                 top: 90%;
-                left: 40%;
+                left: 37%;
             }
             
             .player-score {
@@ -73,7 +74,7 @@
             }
             
             .active {
-                background-color: rgb(201, 189, 189);
+                background-image: linear-gradient( green, yellow, blue);
                 color: green;
                 width: 500px;
                 height: 500px;
@@ -112,26 +113,34 @@
             
             botton {
                 position: absolute;
-                width: 200px;
-                left: 50%;
+                padding: 30px 30px;
+                left: 46%;
                 transform: translateX(-50%j);
-                color: #555;
-                background: none;
+                color: rgb(238, 25, 25);
+                background: grey;
                 border: none;
-                font-family: lato;
+                font-family: cursive;
                 font-size: 20px;
+                margin: auto;
                 text-transform: uppercase;
                 cursor: pointer;
                 font-weight: 300;
-                transition: background-color 0.3s, color 0.3s;
+                border: 10px solid grey;
+                transition: background-color 0.3s, color 0.7s;
             }
             
             button:hover {
-                font-weight: 600px;
+                font-weight: 900px;
+                font-size: 20px;
+                background-image: radial-gradient(circle, red, yellow, green);
+                height: 500%;
+                border: 3px solid grey;
             }
             
             button:hover i {
                 margin-right: 20px;
+                height: 20px;
+                font-size: 200%;
             }
             
             button:focus {
@@ -171,9 +180,10 @@
             }
             
             .winner {
-                background-color: #11f81c;
+                background-image: radial-gradient(circle, red, yellow, green, blue, skyblue);
                 border: 5px solid blue;
-                border-radius: 20%;
+                border-radius: 30%;
+                color: yellow;
             }
             
             .winner .player-name {
